--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -13,3 +13,21 @@
     text-decoration: none;
     color: #262626;
 }
+.Header__nav-group {
+    list-style: none;
+    padding:0;
+    margin:0;
+    display: flex;
+    justify-content:space-between;
+}
+.Header__nav-link{
+    margin:0;
+}
+.Header__logo_link a{
+    text-decoration: none;
+    color: #262626;
+}
+.Header__nav-link .NavLink--active{
+    padding-bottom:2px;
+    border-bottom:2px solid;
+}
